--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                             </div>
                         </form>
 
-                        <div class="mb-4 pb-2" data-unit="celcius">
-                            <div class="form-check form-check-inline">
+                        <div class="mb-4 pb-2">
+                            <div class="form-check form-check-inline" style="display: none;">
                                 <input class="form-check-input celcius" type="radio" name="inlineRadioOptions"
                                     id="inlineRadio1" value="c" checked />
                                 <label class="form-check-label" for="inlineRadio1">Celsius</label>
                             </div>
 
-                            <div class="form-check form-check-inline">
+                            <div class="form-check form-check-inline" style="display: none;">
                                 <input class="form-check-input farenheit" type="radio" name="inlineRadioOptions"
                                     id="inlineRadio2" value="f" />
                                 <label class="form-check-label" for="inlineRadio2">Farenheit</label>
