--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <form id="city-form">
                             <div class="input-group rounded mb-3">
                                 <input type="search" class="form-control rounded" id="input-city" placeholder="City"
-                                    aria-label="Search" aria-describedby="search-addon" autocomplete="off" required/>
+                                    aria-label="Search" aria-describedby="search-addon" autocomplete="off" required />
                                 <input type="submit" class="input-group-text border-0 fw-bold" id="search-btn"
                                     value="Check!" />
                             </div>
@@ -47,8 +47,10 @@
                             </div>
                         </div>
 
-                        <div class="cards-container">
-
+                        <div class="cards-container d-flex justify-content-center">
+                            <div class="spinner-border" role="status">
+                                <span class="sr-only"></span>
+                            </div>
                         </div>
 
                     </div>
