--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="./assets/style.css">
     <title>Weather Web</title>
 </head>
 
@@ -34,23 +35,20 @@
                         </form>
 
                         <div class="mb-4 pb-2">
-                            <div class="form-check form-check-inline" style="display: none;">
+                            <div class="form-check form-check-inline">
                                 <input class="form-check-input celcius" type="radio" name="inlineRadioOptions"
                                     id="inlineRadio1" value="c" checked />
                                 <label class="form-check-label" for="inlineRadio1">Celsius</label>
                             </div>
 
-                            <div class="form-check form-check-inline" style="display: none;">
+                            <div class="form-check form-check-inline">
                                 <input class="form-check-input farenheit" type="radio" name="inlineRadioOptions"
                                     id="inlineRadio2" value="f" />
-                                <label class="form-check-label" for="inlineRadio2">Farenheit</label>
+                                <label class="form-check-label" for="inlineRadio2">Fahrenheit</label>
                             </div>
                         </div>
 
-                        <div class="cards-container d-flex justify-content-center">
-                            <div class="spinner-border" role="status">
-                                <span class="sr-only"></span>
-                            </div>
+                        <div class="cards-container d-flex justify-content-center align-items-center">
                         </div>
 
                     </div>
@@ -66,22 +64,21 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-- My script -->
     <script src="assets/js/constants.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/script.js"></script>
-
 </body>
 
 </html>
